Someone removed the 3.1 TOCGuide entry.

--- a/reflector/reflector.properties
+++ b/reflector/reflector.properties
@@ -22,6 +22,7 @@ default.update.properties=http://svn.terracotta.org/svn/tc/update-checker/update
 3.2.SessionsQuickStart=http://www.terracotta.org/web/display/docs/Sessions+Configurator+Guide
 3.2.SessionsTutorial=http://www.terracotta.org/web/display/orgsite/Sessions+Tutorial
 3.2.ConsoleGuide=http://www.terracotta.org/web/display/docs/Terracotta+Developer+Console
+3.2.TOCGuide=http://www.terracotta.org/web/display/docs/Terracotta+Operations+Center
 3.2.ConceptAndArchGuide=http://www.terracotta.org/web/display/docs/Concept+and+Architecture+Guide
 3.2.ConfigGuideAndRef=http://www.terracotta.org/web/display/docs/Configuration+Guide+and+Reference
 3.2.PluginReferenceGuide=http://www.terracotta.org/web/display/docs/Eclipse+Plugin+Guide
@@ -54,6 +55,7 @@ default.update.properties=http://svn.terracotta.org/svn/tc/update-checker/update
 3.1.SessionsQuickStart=http://www.terracotta.org/web/display/docs/Sessions+Configurator+Guide
 3.1.SessionsTutorial=http://www.terracotta.org/web/display/orgsite/Sessions+Tutorial
 3.1.ConsoleGuide=http://www.terracotta.org/web/display/docs/Terracotta+Developer+Console
+3.1.TOCGuide=http://www.terracotta.org/web/display/docs/Terracotta+Operations+Center
 3.1.ConceptAndArchGuide=http://www.terracotta.org/web/display/docs/Concept+and+Architecture+Guide
 3.1.ConfigGuideAndRef=http://www.terracotta.org/web/display/docs/Configuration+Guide+and+Reference
 3.1.PluginReferenceGuide=http://www.terracotta.org/web/display/docs/Eclipse+Plugin+Guide
