--- a/dso/branches/3.1/code/base/tim-get-tool/.classpath
+++ b/dso/branches/3.1/code/base/tim-get-tool/.classpath
@@ -9,6 +9,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry exported="true" kind="lib" path="/dependencies/lib/guice-1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="/dependencies/lib/jetty-6.1.8.jar"/>
+	<classpathentry exported="true" kind="lib" path="/dependencies/lib/jetty-util-6.1.8.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/common"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/common-api"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/license-common"/>
