make txn folding OFF by default (CDV-1381)

--- a/dso/branches/3.1/code/base/common/src.resources/com/tc/properties/tc.properties
+++ b/dso/branches/3.1/code/base/common/src.resources/com/tc/properties/tc.properties
@@ -19,7 +19,7 @@
 # Description               : This section contains the defaults for the cache manager for the L2
 # enabled                   : Enable/disable L2's cache manager
 # logging.enabled           : Enable/disable L2's cache manager logging
-# leastCount                : Minimum increase in the % usage of memory for starting eviction 
+# leastCount                : Minimum increase in the % usage of memory for starting eviction
 #                             once the threshold value specified of memory used is reached
 # percentageToEvict         : % of memory to evict once it reaches threshold
 # sleepInterval             : Initial sleep time between each cycles of memory usage analysis
@@ -47,8 +47,8 @@ l2.cachemanager.criticalObjectThreshold = -1
 # logging.printStats                : Enables/disables logging for tx stats
 # logging.printCommits              : Enables/disables logging for tx commits
 # logging.printBroadCastStats       : Enables/disables logging for tx Broadcasts
-# passive.throttle.enabled          : Enables/disables throttling of active from Passive when 
-#                                     the number of pending txns reaches the threshold 
+# passive.throttle.enabled          : Enables/disables throttling of active from Passive when
+#                                     the number of pending txns reaches the threshold
 # passive.throttle.threshold        : Number of pending transactions after which passive will
 #                                     throttle the active
 # passive.throttle.maxSleepSeconds  : Sleep time for active when passive throttles it
@@ -109,7 +109,7 @@ l2.transactionmanager.passive.throttle.maxSleepSeconds= 5
 # dgc.young.enabled             - Enables/Disables the young gen collector
 # dgc.young.frequencyInMillis - The time in millis between each young gen collection.
 #                               (default : 1 min, not advisable to run more frequently)
-# data.backup.throttle.timeInMillis - time to sleep between copying of each file from the db 
+# data.backup.throttle.timeInMillis - time to sleep between copying of each file from the db
 #                                     while taking backup
 #
 ###########################################################################################
@@ -143,7 +143,7 @@ l2.data.backup.throttle.timeInMillis = 0
 # Description                         : This section contains configuration for SEDA stages for L2
 # commitstage.threads                 : Number of seda commit stage thread
 # faultstage.threads                  : Number of seda fault stage thread
-# managedobjectrequeststage.threads   : Number of threads for object request seda stage 
+# managedobjectrequeststage.threads   : Number of threads for object request seda stage
 #                                       (experimental, do not change)
 # managedobjectresponsestage.threads  : Number of threads for object response seda stage
 # flushstage.threads                  : Number of threads for flusing of objects to disk
@@ -151,7 +151,7 @@ l2.data.backup.throttle.timeInMillis = 0
 # gcdeletestage.threads               : Number of threads for deletetion of objects after
 #                                       dgc finishes marking
 # stage.sink.capacity                 : Capacity of seda stage queue, Integer.MAX_VALUE if not set
-#										(experimental, do not change)
+#                    (experimental, do not change)
 ###########################################################################################
 l2.seda.commitstage.threads = 4
 l2.seda.faultstage.threads = 4
@@ -186,7 +186,7 @@ l2.berkeleydb.je.cleaner.lookAheadCacheSize=32768
 l2.berkeleydb.je.cleaner.minAge=5
 
 ###########################################################################################
-# Section 	  :  L2 LFU cachepolicy defaults
+# Section     :  L2 LFU cachepolicy defaults
 # Description : If cachePolicy is set to lfu, then these values take effect
 #   agingFactor (float)                    - valid values 0 to 1
 #   recentlyAccessedIgnorePercentage (int) - valid values 0 - 100
@@ -199,8 +199,8 @@ l2.lfu.debug.enabled = false
 ###########################################################################################
 # Section :  L2 Bean shell Properties
 # Description : Bean shell can be enabled in the server for debugging.
-# enabled	:	Enables/disables Beanshell
-# port		: 	Port number for Beanshell
+# enabled     :  Enables/disables Beanshell
+# port        :   Port number for Beanshell
 ###########################################################################################
 l2.beanshell.enabled = false
 l2.beanshell.port = 9929
@@ -308,7 +308,7 @@ l1.modules.tc-version-check =
 # Description               : This section contains the defaults for the cache manager for the L1
 # enabled                   : Enable/disable L2's cache manager
 # logging.enabled           : Enable/disable L2's cache manager logging
-# leastCount                : Minimum increase in the % usage of memory for starting eviction 
+# leastCount                : Minimum increase in the % usage of memory for starting eviction
 #                             once the threshold value specified of memory used is reached
 # percentageToEvict         : % of memory to evict once it reaches threshold
 # sleepInterval             : Initial sleep time between each cycles of memory usage analysis
@@ -377,7 +377,7 @@ l1.transactionmanager.completedAckFlushTimeout = 5000
 l1.transactionmanager.strings.compress.enabled = true
 l1.transactionmanager.strings.compress.logging.enabled = false
 l1.transactionmanager.strings.compress.minSize = 512
-l1.transactionmanager.folding.enabled = true
+l1.transactionmanager.folding.enabled = false
 l1.transactionmanager.folding.object.limit = 0
 l1.transactionmanager.folding.lock.limit = 0
 l1.transactionmanager.folding.debug = false
@@ -422,9 +422,9 @@ l2.l1reconnect.sendWindow = 32
 ###########################################################################################
 # Section                   : L1 Object Manager Properties
 # Description               : This section contains the defaults for the Object manager for the L1
-# remote.maxDNALRUSize      : Count of dnas after which l1s will remove unrequested object 
+# remote.maxDNALRUSize      : Count of dnas after which l1s will remove unrequested object
 # remote.logging.enabled    : Enable/disable logging of remote object manager
-# objectid.request.size     : Number of object ids requested at once from L2 for creating 
+# objectid.request.size     : Number of object ids requested at once from L2 for creating
 #                             new objects
 # flush.logging.enabled     : Enable/disable object's flush logging
 # fault.logging.enabled     : Enable/disable object's fault logging
@@ -463,7 +463,7 @@ logging.longgc.threshold = 8000
 # stage.monitor.delay                 : long            - frequency in milliseconds
 # bytebuffer.pooling.enabled          : Enable/disable tc byte buffer pooling
 # bytebuffer.common.pool.maxcount     : Max size of pool for tc byte buffer
-# bytebuffer.threadlocal.pool.maxcount: Thread pool size 
+# bytebuffer.threadlocal.pool.maxcount: Thread pool size
 ###########################################################################################
 tc.stage.monitor.enabled = false
 tc.stage.monitor.delay = 5000
@@ -554,10 +554,10 @@ memory.monitor.forcebasic = false
 #                                    CacheManager.singleton will be configured as roots.
 #  logging.enabled                 : Enable/disable ehcache logging
 #  evictor.logging.enabled         : Enable/disable evictor's logging
-#  concurrency                     : Specifies the number of internal segments and gates the maximum 
-#                                    number of possible concurrent writers to the cache at one time.  
-#                                    There is memory and management overhead associated with each 
-#                                    segment. It is best for the hash function used in tim-ehcache 
+#  concurrency                     : Specifies the number of internal segments and gates the maximum
+#                                    number of possible concurrent writers to the cache at one time.
+#                                    There is memory and management overhead associated with each
+#                                    segment. It is best for the hash function used in tim-ehcache
 #                                    if the concurrency is a power of 2.
 #  evictor.pool.size               : Thread pool size for evictor
 #  global.eviction.enable          : Enable/disable global eviction from the cache
@@ -616,11 +616,11 @@ net.core.keepalive = false
 # Section :  CVT
 #   cvt.retriever.notification.interval - Interval between log file messages when the CVT
 #                                         retriever is running (in seconds)
-#   cvt.statistics.logging.interval 	- Interval between logging of statistics data (seconds)
-#   cvt.buffer.randomsuffix.enabled 	- If true, add a random suffix when a buffer is created
-#   cvt.store.randomsuffix.enabled  	- If true, add a random suffix when a store is created
-#   cvt.rest.interface.enabled      	- If false, the REST interface for the CVT will be
-#	                                      disabled. True by default
+#   cvt.statistics.logging.interval     - Interval between logging of statistics data (seconds)
+#   cvt.buffer.randomsuffix.enabled     - If true, add a random suffix when a buffer is created
+#   cvt.store.randomsuffix.enabled      - If true, add a random suffix when a store is created
+#   cvt.rest.interface.enabled          - If false, the REST interface for the CVT will be
+#                                        disabled. True by default
 #   cvt.client.fail.buffer.open         - If true, always fail the open of the CVT statistics buffer on a client. This is
 #                                         supposed to be used by tests. False by default
 ###########################################################################################
