--- a/dso/branches/3.1/code/base/management-api/src.resources/com/tc/management/management.properties
+++ b/dso/branches/3.1/code/base/management-api/src.resources/com/tc/management/management.properties
@@ -9,6 +9,7 @@
 domain.public   = org.terracotta
 domain.internal = org.terracotta.internal
 domain.tim      = org.terracotta.tim
+domain.ehcache  = net.sf.ehcache
 
 # System property that DSO client VMs can set to override their hostname, which defaults to host:port
 system-property.node-name = tc.node-name
