added property to enable/disabled dgc faulting optimization

--- a/dso/trunk/code/base/common/src.resources/com/tc/properties/tc.properties
+++ b/dso/trunk/code/base/common/src.resources/com/tc/properties/tc.properties
@@ -109,6 +109,8 @@ l2.transactionmanager.passive.throttle.maxSleepSeconds= 5
 # dgc.young.enabled             - Enables/Disables the young gen collector
 # dgc.young.frequencyInMillis - The time in millis between each young gen collection.
 #                               (default : 1 min, not advisable to run more frequently)
+# dgc.faulting.optimization - This property will not fault in objects that have no references
+#                             during DGC mark stage. 
 # data.backup.throttle.timeInMillis - time to sleep between copying of each file from the db
 #                                     while taking backup
 #
@@ -136,6 +138,7 @@ l2.objectmanager.persistor.measure.performance = false
 l2.objectmanager.dgc.throttle.requestsPerThrottle = 1000
 l2.objectmanager.dgc.young.enabled = false
 l2.objectmanager.dgc.young.frequencyInMillis = 180000
+l2.objectmanager.dgc.faulting.optimization = false
 l2.data.backup.throttle.timeInMillis = 0
 
 ###########################################################################################
