add ehcache update entry

--- a/reflector/reflector.properties
+++ b/reflector/reflector.properties
@@ -5,6 +5,7 @@
 default.IntegrationsLucene=http://www.terracotta.org/web/display/orgsite/Integration+Guides
 default.IntegrationsWicket=http://www.terracotta.org/web/display/orgsite/Integration+Guides
 default.update.properties=http://svn.terracotta.org/svn/tc/update-checker/update-list.properties
+ehcache.default.update.properties=http://svn.terracotta.org/svn/tc/update-checker/ehcache-update-list.properties
 ### End default
 
 
