--- a/update-checker/update-list.properties
+++ b/update-checker/update-list.properties
@@ -7,125 +7,125 @@
 ## 3.1.0 -- latest release
 3.1.0.updates			= 
 3.1.0.notices			= 3.1.0 is the latest GA release from Terracotta
-3.1.0.release notes	= http://orgstage/web/display/docs/Release+Notes
+3.1.0.release-notes	= http://orgstage/web/display/docs/Release+Notes
 
 
 ## 3.1.0-stable1 -- 
 3.1.0-stable1.updates			= 3.1.0
 3.1.0-stable1.notices			= Terracotta recommends upgrading to the latest stable build, 3.1.0, for best results
-3.1.0-stable1.release notes	= http://orgstage/web/display/docs/Release+Notes
+3.1.0-stable1.release-notes	= http://orgstage/web/display/docs/Release+Notes
 
 ## 3.1.0-stable0 -- 
 3.1.0-stable0.updates			= 3.1.0
 3.1.0-stable0T.notices			= Terracotta recommends upgrading to the latest stable build, 3.1.0, for best results
-3.1.0-stable0.release notes	= http://orgstage/web/display/docs/Release+Notes
+3.1.0-stable0.release-notes	= http://orgstage/web/display/docs/Release+Notes
 
 ## 3.0.1 -- 
 3.0.1.updates			= 
 3.0.1.notices			= Terracotta recommends upgrading to the latest stable build, 3.1.0, for best results
-3.0.1.release notes	= http://orgstage/web/display/docs/Release+Notes
+3.0.1.release-notes	= http://orgstage/web/display/docs/Release+Notes
 
 ## 3.0.0 -- 
 3.0.0.updates			= 3.1.0
 3.0.0.notices			= Terracotta recommends upgrading to the latest stable build, 3.1.0, for best results
-3.0.0.release notes	= http://orgstage/web/display/docs/Release+Notes
+3.0.0.release-notes	= http://orgstage/web/display/docs/Release+Notes
 
 ## 3.0.0-stable1 -- 
 3.0.0stable1.updates			= 3.1.0
 3.0.0-stable1.notices			= Terracotta recommends upgrading to the latest stable build, 3.1.0, for best results
-3.0.0-stable1.release notes	= http://orgstage/web/display/docs/Release+Notes
+3.0.0-stable1.release-notes	= http://orgstage/web/display/docs/Release+Notes
 
 ## 3.0.0-stable0 -- 
 3.0.0-stable0.updates			= 3.1.0
 3.0.0-stable0.notices			= Terracotta recommends upgrading to the latest stable build, 3.1.0, for best results
-3.0.0-stable0.release notes	= http://orgstage/web/display/docs/Release+Notes
+3.0.0-stable0.release-notes	= http://orgstage/web/display/docs/Release+Notes
 
 ## 2.7.3 -- Latest 2.7 version
 2.7.3.updates			= 3.1.0
 2.7.3.notices			= This is the latest 2.7 Terracotta version. 3.1.0 is the latest release
-2.7.3.release notes	=  http://www.terracotta.org/web/display/docs27/Release+Notes
+2.7.3.release-notes	=  http://www.terracotta.org/web/display/docs27/Release+Notes
 
 ## 2.7.2
 2.7.2.updates			= 3.1.0
 2.7.2.notices			= Terracotta recommends upgrading to the latest release, 3.1.0, for best results
-2.7.2.release notes	=  http://www.terracotta.org/web/display/docs27/Release+Notes
+2.7.2.release-notes	=  http://www.terracotta.org/web/display/docs27/Release+Notes
 
 ## 2.7.1
 2.7.1.updates			= 3.1.0
 2.7.1.notices			= Terracotta recommends upgrading to the latest release, 3.1.0, for best results
-2.7.1.release notes	=  http://www.terracotta.org/web/display/docs27/Release+Notes
+2.7.1.release-notes	=  http://www.terracotta.org/web/display/docs27/Release+Notes
 
 ## 2.7.0 
 2.7.0.updates			= 3.1.0
 2.7.0.notices			= Terracotta recommends upgrading to the latest release, 3.1.0, for best results
-2.7.0.release notes	=  http://www.terracotta.org/web/display/docs27/Release+Notes
+2.7.0.release-notes	=  http://www.terracotta.org/web/display/docs27/Release+Notes
 
 ## 2.7.0-stable1 
 2.7.0-stable1.updates			= 3.1.0
 2.7.0-stable1.notices			= Terracotta recommends upgrading to the latest release, 3.1.0, for best results
-2.7.0-stable1.release notes	=  http://www.terracotta.org/web/display/docs27/Release+Notes
+2.7.0-stable1.release-notes	=  http://www.terracotta.org/web/display/docs27/Release+Notes
 
 ## 2.7.0-stable0 
 2.7.0-stable0.updates			= 3.1.0
 2.7.0-stable0.notices			= Terracotta recommends upgrading to the latest release, 3.1.0, for best results
-2.7.0-stable0.release notes	= http://www.terracotta.org/web/display/docs27/Release+Notes
+2.7.0-stable0.release-notes	= http://www.terracotta.org/web/display/docs27/Release+Notes
 
 ## 2.6.4
 2.6.4.updates			= 3.1.0
 2.6.4.notices			= Terracotta recommends upgrading to the latest release, 3.1.0, for best results
-2.6.4.release notes	= http://www.terracotta.org/confluence/display/docs1/Release+Notes+2.6
+2.6.4.release-notes	= http://www.terracotta.org/confluence/display/docs1/Release+Notes+2.6
 
 ## 2.6.2 -- 
 2.6.2.updates			= 3.1.0
 2.6.2.notices			= Terracotta recommends upgrading to the latest release, 3.1.0, for best results
-2.6.2.release notes	= http://www.terracotta.org/confluence/display/docs1/Release+Notes+2.6
+2.6.2.release-notes	= http://www.terracotta.org/confluence/display/docs1/Release+Notes+2.6
 
 ## 2.6.1  
 2.6.1.updates			= 3.1.0
 2.6.1.notices			= Terracotta recommends upgrading to the latest release, 3.1.0, for best results
-2.6.1.release notes	= http://www.terracotta.org/confluence/display/docs1/Release+Notes+2.6
+2.6.1.release-notes	= http://www.terracotta.org/confluence/display/docs1/Release+Notes+2.6
 
 ## 2.6.0  
 2.6.0.updates			= 3.1.0
 2.6.0.notices			= Terracotta recommends upgrading to the latest release, 3.1.0, for best results
-2.6.0.release notes	= http://www.terracotta.org/confluence/display/docs1/Release+Notes+2.6
+2.6.0.release-notes	= http://www.terracotta.org/confluence/display/docs1/Release+Notes+2.6
 
 ## 2.6-stable4  -- 
 2.6-stable4.updates			= 3.1.0
 2.6-stable4.notices			= Terracotta recommends upgrading to the latest release, 3.1.0, for best results
-2.6-stable4.release notes	= http://www.terracotta.org/confluence/display/docs1/Release+Notes+2.6
+2.6-stable4.release-notes	= http://www.terracotta.org/confluence/display/docs1/Release+Notes+2.6
 
 ## 2.6-stable1  
 2.6-stable1.updates			= 3.1.0
 2.6-stable1.notices			= Terracotta recommends upgrading to the latest release, 3.1.0, for best results
-2.6-stable1.release notes	= http://www.terracotta.org/confluence/display/docs1/Release+Notes+2.6
+2.6-stable1.release-notes	= http://www.terracotta.org/confluence/display/docs1/Release+Notes+2.6
 
 ## 2.6-stable0  
 2.6-stable0.updates			= 3.1.0
 2.6-stable0.notices			= Terracotta recommends upgrading to the latest release, 3.1.0, for best results
-2.6-stable0.release notes	= http://www.terracotta.org/confluence/display/docs1/Release+Notes+2.6
+2.6-stable0.release-notes	= http://www.terracotta.org/confluence/display/docs1/Release+Notes+2.6
 
 ## 2.5.4  -- latest 2.5 Version
 2.5.4.updates 				= 3.1.0
 2.5.4.notice				= Terracotta recommends upgrading to the latest release, 3.1.0, for best results
-2.5.4.release notes			= http://www.terracotta.org/confluence/display/docs25/Release+Notes+2.5
+2.5.4.release-notes			= http://www.terracotta.org/confluence/display/docs25/Release+Notes+2.5
 
 ## 2.5.3 -- EE Only Patch Build
 
 ## 2.5.2
 2.5.2.updates 				= 3.1.0
 2.5.2.notice				= Terracotta recommends upgrading to the latest release, 3.1.0, for best results
-2.5.2.release notes			= http://www.terracotta.org/confluence/display/docs25/Release+Notes+2.5
+2.5.2.release-notes			= http://www.terracotta.org/confluence/display/docs25/Release+Notes+2.5
 
 ## 2.5.1
 2.5.1.updates 				= 3.1.0
 2.5.1.notice				= Terracotta recommends upgrading to the latest release, 3.1.0, for best results
-2.5.1.release notes			= http://www.terracotta.org/confluence/display/docs25/Release+Notes+2.5
+2.5.1.release-notes			= http://www.terracotta.org/confluence/display/docs25/Release+Notes+2.5
 
 ## 2.5.0
 2.5.0.updates 				= 3.1.0
 2.5.0.notice				= Terracotta recommends upgrading to the latest release, 3.1.0, for best results
-2.5.0.release notes			= http://www.terracotta.org/confluence/display/docs25/Release+Notes+2.5
+2.5.0.release-notes			= http://www.terracotta.org/confluence/display/docs25/Release+Notes+2.5
 
 ## 2.5-stable2 
 2.5-stable2.updates       = 3.1.0
