--- a/update-checker/update-list.properties
+++ b/update-checker/update-list.properties
@@ -17,11 +17,11 @@
 
 ## 3.1.0-stable0 -- 
 3.1.0-stable0.updates			= 3.1.0
-3.1.0-stable0T.notices			= Terracotta recommends upgrading to the latest stable build, 3.1.0, for best results
+3.1.0-stable0.notices			= Terracotta recommends upgrading to the latest stable build, 3.1.0, for best results
 3.1.0-stable0.release-notes	= http://orgstage/web/display/docs/Release+Notes
 
 ## 3.0.1 -- 
-3.0.1.updates			= 
+3.0.1.updates			= 3.1.0
 3.0.1.notices			= Terracotta recommends upgrading to the latest stable build, 3.1.0, for best results
 3.0.1.release-notes	= http://orgstage/web/display/docs/Release+Notes
 
