--- a/update-checker/ehcache-update-list.properties
+++ b/update-checker/ehcache-update-list.properties
@@ -5,3 +5,7 @@
 #1.7.0.updates			= 
 #1.7.0.notices			= 1.7.0 is the latest GA release
 #1.7.0.release-notes	= http://ehcache.org/news.html
+
+1.7.0-SNAPSHOT.updates = 1.7.0
+1.7.0-SNAPSHOT.notices			= 1.7.0 is the latest GA release
+1.7.0-SNAPSHOT.release-notes	= http://ehcache.org/news.html
