test update check

--- a/update-checker/ehcache-update-list.properties
+++ b/update-checker/ehcache-update-list.properties
@@ -10,4 +10,4 @@
 1.7.1.notices			= 1.7.1 is the latest GA release
 1.7.1.release-notes	= http://ehcache.org/news.html
 
-1.7.0-SNAPSHOT.updates = 1.7.0, 1.7.1
+1.7.0-SNAPSHOT.updates = 1.7.0,
