EHC-372: include distributed-cache in the kit

--- a/dso/trunk/code/base/buildconfig/distribution/dso-enterprise.def.yml
+++ b/dso/trunk/code/base/buildconfig/distribution/dso-enterprise.def.yml
@@ -145,6 +145,9 @@ postscripts:
             - tim-jetty-6.1
         - dest: 
             - tools/sessions/configurator-sandbox
+  - include-external-resources:
+      args:
+        - buildconfig/distribution/external-resources.yml            
   - delete-tim-get-index
   - include-schemas:
       args:
