--- a/dso/trunk/code/base/buildconfig/distribution/dso-opensource.def.yml
+++ b/dso/trunk/code/base/buildconfig/distribution/dso-opensource.def.yml
@@ -129,11 +129,8 @@ packaging:
   - zip:
       assert: '!@build_environment.os_type =~ /^\s*windows\s*$/i'
   - izpack
+
 postscripts:
-  - include-external-resources:
-      args:
-        - buildconfig/distribution/external-resources.yml
-        
   - fix-bin-perms
   - inject-copyright
   - make-build-data:
@@ -151,6 +148,7 @@ postscripts:
         - tim-apache-struts-1.1
         - tim-jetty-6.1
         - terracotta-hibernate-cache
+        - ehcache-terracotta
         
   - extract-hibernate-cache-reference:
       args:
@@ -166,7 +164,9 @@ postscripts:
         - dest: 
             - tools/sessions/configurator-sandbox
 
-
+  - include-external-resources:
+      args:
+        - buildconfig/distribution/external-resources.yml
         
   - delete-tim-get-index
   - include-schemas:
