--- a/dso/branches/3.1/code/base/buildconfig/distribution/dso-enterprise.def.yml
+++ b/dso/branches/3.1/code/base/buildconfig/distribution/dso-enterprise.def.yml
@@ -131,6 +131,7 @@ postscripts:
         - tim-apache-struts-1.1
         - tim-jetty-6.1
         - terracotta-hibernate-cache-ee
+        - ehcache-terracotta-ee
   - extract-hibernate-cache-reference:
       args:
         - dest: hibernate
@@ -144,6 +145,9 @@ postscripts:
             - tim-jetty-6.1
         - dest: 
             - tools/sessions/configurator-sandbox
+  - include-external-resources:
+      args:
+        - buildconfig/distribution/external-resources.yml            
   - delete-tim-get-index
   - include-schemas:
       args:
