--- a/dso/branches/3.1/code/base/buildconfig/distribution/external-resources.yml
+++ b/dso/branches/3.1/code/base/buildconfig/distribution/external-resources.yml
@@ -8,14 +8,14 @@ artifacts:
   - maven_artifact: true
     groupId: net.sf.ehcache
     artifactId: ehcache-core
-    version: 1.7.0-SNAPSHOT
+    version: 1.7.0
     destination: distributed-cache
 
   - maven_artifact: true
     groupId: net.sf.ehcache
     artifactId: ehcache-core
     classifier: javadoc
-    version: 1.7.0-SNAPSHOT
+    version: 1.7.0
     destination: distributed-cache
     
   - maven_artifact: false
