adding thread dump of server for MNK-1386 and MNK-1293

--- a/dso/trunk/code/base/modules.def.yml
+++ b/dso/trunk/code/base/modules.def.yml
@@ -285,6 +285,8 @@ modules:
         - common
         - common-api
         - license-common
+        - deploy
+        - management-api
         - dso-common
         - dso-common-jdk16
         - dso-l1
