--- a/dso/trunk/code/base/simulator/.classpath
+++ b/dso/trunk/code/base/simulator/.classpath
@@ -14,4 +14,7 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/dso-statistics"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/dso-statistics-api"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/license-common"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/deploy"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/management-api"/>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
