--- a/dso/branches/3.1/code/base/modules.def.yml
+++ b/dso/branches/3.1/code/base/modules.def.yml
@@ -285,6 +285,7 @@ modules:
         - common
         - common-api
         - license-common
+        - deploy
         - dso-common
         - dso-common-jdk16
         - dso-l1
@@ -293,6 +294,7 @@ modules:
         - dso-l2-common
         - dso-statistics
         - dso-statistics-api
+        - management-api
   - ui-configurator:
       options:
         jdk: J2SE-1.5
