--- a/dso/branches/3.1/code/base/dso-container-tests/.classpath
+++ b/dso/branches/3.1/code/base/dso-container-tests/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry excluding="**/.svn/*" kind="src" output="build.eclipse/tests.base.classes" path="tests.base"/>
 	<classpathentry excluding="**/.svn/*" kind="src" output="build.eclipse/tests.base.classes" path="tests.base.resources"/>
+	<classpathentry excluding="**/.svn/*" kind="src" output="build.eclipse/tests.system.classes" path="tests.system"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry exported="true" kind="lib" path="/dependencies/lib/ant-launcher-1.7.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="/dependencies/lib/commons-httpclient-3.1.jar"/>
@@ -13,7 +14,7 @@
 	<classpathentry exported="true" kind="lib" path="/dependencies/lib/nekohtml-1.9.6.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="/dependencies/lib/spring-2.5.6.jar"/>
 	<classpathentry exported="true" kind="lib" path="/dependencies/lib/spring-webmvc-2.5.6.jar"/>
-	<classpathentry exported="true" kind="lib" path="/dependencies/lib/tc-cargo-core-uberjar-0.9.20090605.jar"/>
+	<classpathentry exported="true" kind="lib" path="/dependencies/lib/tc-cargo-core-uberjar-0.9.20091015.jar"/>
 	<classpathentry exported="true" kind="lib" path="/dependencies/lib/xercesImpl-2.9.1.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/aspectwerkz"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/common"/>
