--- a/update-checker/ehcache-update-list.properties
+++ b/update-checker/ehcache-update-list.properties
@@ -2,9 +2,9 @@
 # general.notice = This notice should rarely, if ever, be used as everyone running ehcache will see it
 
 ## 1.7.0 -- latest release
-#1.7.0.updates			= 
-#1.7.0.notices			= 1.7.0 is the latest GA release
-#1.7.0.release-notes	= http://ehcache.org/news.html
+1.7.0.updates			= 
+1.7.0.notices			= 1.7.0 is the latest GA release
+1.7.0.release-notes	= http://ehcache.org/news.html
 
+1.7.0-SNAPSHOT.updates = 1.7.0
 
-1.7.0-SNAPSHOT.updates = 
