1) Batch object lookup requests from the client for better performance 2) Major refactoring and statefying RemoteobjectManager 3) cleans and refactoring prefetching etc.

--- a/dso/trunk/code/base/common/src.resources/com/tc/properties/tc.properties
+++ b/dso/trunk/code/base/common/src.resources/com/tc/properties/tc.properties
@@ -429,6 +429,11 @@ l2.l1reconnect.sendWindow = 32
 # Description               : This section contains the defaults for the Object manager for the L1
 # remote.maxDNALRUSize      : Count of dnas after which l1s will remove unrequested object
 # remote.logging.enabled    : Enable/disable logging of remote object manager
+# remote.maxRequestSentImmediately
+#                           : Maximum number of requests send immediately after which it will be batched
+# remote.batchLookupTimePeriod
+#                           : Time Period in millisecond within which requests are batched after sending
+#                             maxRequestSentImmediately number of requests.
 # objectid.request.size     : Number of object ids requested at once from L2 for creating
 #                             new objects
 # flush.logging.enabled     : Enable/disable object's flush logging
@@ -436,6 +441,8 @@ l2.l1reconnect.sendWindow = 32
 ###########################################################################################
 l1.objectmanager.remote.maxDNALRUSize = 60
 l1.objectmanager.remote.logging.enabled = false
+l1.objectmanager.remote.maxRequestSentImmediately = 4
+l1.objectmanager.remote.batchLookupTimePeriod = 1
 l1.objectmanager.objectid.request.size = 50000
 l1.objectmanager.flush.logging.enabled = false
 l1.objectmanager.fault.logging.enabled = false
