--- a/reflector/reflector.properties
+++ b/reflector/reflector.properties
@@ -6,6 +6,7 @@ default.IntegrationsLucene=http://www.terracotta.org/web/display/orgsite/Integra
 default.IntegrationsWicket=http://www.terracotta.org/web/display/orgsite/Integration+Guides
 default.update.properties=http://svn.terracotta.org/svn/tc/update-checker/update-list.properties
 ehcache.default.update.properties=http://svn.terracotta.org/svn/tc/update-checker/ehcache-update-list.properties
+ehcache.monitor.update.properties=http://svn.terracotta.org/svn/tc/update-checker/ehcache-monitor-update-list.properties
 ### End default
 
 
