--- a/dso/trunk/code/base/common/src.resources/com/tc/properties/tc.properties
+++ b/dso/trunk/code/base/common/src.resources/com/tc/properties/tc.properties
@@ -559,6 +559,11 @@ session.debug.sessions = false
 ###########################################################################################
 memory.monitor.forcebasic = false
 
+
+###########################################################################################
+# NOTE: All Ehcache properties below refer to the legacy tim-ehcache-1.3 and 
+# tim-ehcache-1.4 Terracotta Integration Modules.  These properties have no effect on the 
+# Ehache-Terracotta integration that was added in Ehcache 1.7.  
 ###########################################################################################
 #  Section                         : Ehcache
 #  clusterAllCacheManagers         : Whether all CacheManager instances are auto-clustered by default,
